Fix menu item spacing

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -31,3 +31,7 @@ div.entry-content {
 ol, ul {
   li { margin: 1.7em 0; }
 }
+
+ul.menu {
+  li { margin: 0; }
+}
